Setup framework for unit testing shape packing and unpacking.
- Added symmetry to Shape write methods via complimentary read methods.
- Added symmetry to Resource write methods.
- Added initial unit test to send and receive shapes (unvalidated).

--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,12 +1,16 @@
-
-find_package(ZLIB)
-if(ZLIB_FOUND)
-  list(APPEND PACKAGES ZLIB)
-  set(TES_ZLIB 1)
-endif(ZLIB_FOUND)
+find_package(GTest QUIET)
 
 add_subdirectory(3est-bandwidth)
+add_subdirectory(3est-primitive-server)
 add_subdirectory(3est-server)
 
 set_target_properties(3est-bandwidth PROPERTIES FOLDER test)
+set_target_properties(3est-primitive-server PROPERTIES FOLDER test)
 set_target_properties(3est-server PROPERTIES FOLDER test)
+
+# Add unit tests
+if(GTEST_FOUND)
+  add_subdirectory(3est-shapes)
+else(GTEST_FOUND)
+  message("Missing GTest. Unit tests will not be built.")
+endif(GTEST_FOUND)
