First C# shape unit test.
- C# ConnectionMonitor made more consistent with C++ version.
- Server message IDs made consistent in C# and C++ (minor fix).
- C# IServer.Close() added.
- C# supports trying a range of points and reporting the one used.
- Messages all implement IMessage to support ServerUtil message sending.
- Removed old GZipTest
- NUnit version update.

--- a/3esCore/3esCore/3esCore.csproj
+++ b/3esCore/3esCore/3esCore.csproj
@@ -43,12 +43,14 @@
     <Compile Include="Net\CategoryMessageID.cs" />
     <Compile Include="Net\CoordinateFrame.cs" />
     <Compile Include="Net\IConnection.cs" />
+    <Compile Include="Net\IMessage.cs" />
     <Compile Include="Net\MeshShapeFlag.cs" />
     <Compile Include="Server\ConnectionMonitor.cs" />
     <Compile Include="Server\IConnectionMonitor.cs" />
     <Compile Include="Server\IServer.cs" />
     <Compile Include="Server\ServerFlag.cs" />
     <Compile Include="Server\ServerSettings.cs" />
+    <Compile Include="Server\ServerUtil.cs" />
     <Compile Include="Server\TcpConnection.cs" />
     <Compile Include="Server\TcpServer.cs" />
     <Compile Include="Shapes\Arrow.cs" />
