Additional C# unit tests and bug fixes. All tests passing.
- MeshShape unit test
- MeshSet unit test
- PointCloudShape unit test
- Mesh data transfer tested
- ShapeTestFramework timeout removed when debugging.
- Test are handling resource transfer.
- Fixed reading and conversion of floating point values in NetworkStream.
- Fixed indexing in Matrix3 and Matrix4
- Added IMessage interface and ServertUtil for easier message sending.
- Fixed ObjectAttributes handling of scaling in matrix conversion.
- Added message reading to MeshBase and SimpleMesh
- Added message reading to MeshSet, MeshShape and PointCloudShape.
- Better coverage in C++ MeshSet test.
- Added scaling to C++ MeshSet test.

--- a/3esCore/3esCore/3esCore.csproj
+++ b/3esCore/3esCore/3esCore.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Shapes\Capsule.cs" />
     <Compile Include="Shapes\Cone.cs" />
     <Compile Include="Shapes\Cylinder.cs" />
+    <Compile Include="Shapes\PlaceholderMesh.cs" />
     <Compile Include="Shapes\Resource.cs" />
     <Compile Include="Shapes\MeshSet.cs" />
     <Compile Include="Shapes\MeshResource.cs" />
