Project structural fixes.
- Supporting having 3es-core as a stand alone project.
- Moved 3es-doc under 3es-core so that it can be included with 3es-core as a stand alone project.
- Addressed CMake installation setup and supporting 3es-config.cmake scripts.
- Authoritative version number moved into cpp/3es-core/cmake/3es-version.cmake. Number is pushed into the 3es-core.h configuration header.

--- a/cpp/3es-core/CMakeLists.txt
+++ b/cpp/3es-core/CMakeLists.txt
@@ -1,7 +1,12 @@
+#-------------------------------------------------------------------------------
+# Project setup. Detects this as the root or may be included as part of another
+# project.
+#-------------------------------------------------------------------------------
 set(TES_CORE_ONLY Off)
 # Project setup if this is being built as a stand alone project.
-if(NOT ${CMAKE_PROJECT_NAME})
+if(NOT DEFINED CMAKE_PROJECT_NAME OR CMAKE_PROJECT_NAME STREQUAL "3es-core")
   project(3es-core)
+  set(ConfigPackageLocation lib/cmake/3es)
 
   cmake_minimum_required(VERSION 3.5)
 
@@ -10,15 +15,21 @@ if(NOT ${CMAKE_PROJECT_NAME})
 
   set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    target_compile_options(3es-core PRIVATE "-Wno-logical-op-parentheses")
-  endif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-
   set(TES_CORE_ONLY On)
-endif(NOT ${CMAKE_PROJECT_NAME})
+endif(NOT DEFINED CMAKE_PROJECT_NAME OR CMAKE_PROJECT_NAME STREQUAL "3es-core")
 
+#-------------------------------------------------------------------------------
+# Version setup
+#-------------------------------------------------------------------------------
+# 3es-core version. These are referenced when configuring 3es-core.h
+include(cmake/3es-version.cmake)
+
+#-------------------------------------------------------------------------------
+# 3es-core configuration options.
+#-------------------------------------------------------------------------------
 option(TES_ASSERT_ENABLE_DEBUG "Enable assertions in debug builds." ON)
 option(TES_ASSERT_ENABLE_RELEASE "Enable assertions in release builds." ON)
+option(TES_BUILD_DOXYGEN "Build doxgen documentation?" OFF)
 
 option(TES_ZLIB_OFF "Disable ZLIB usage even if found? Intended for testing." OFF)
 set(TES_SOCKETS "custom" CACHE STRING "Select the TCP socket implementation. The 'custom' implementaiton is based on Berkley sockets or Winsock2.")
@@ -26,6 +37,8 @@ set_property(CACHE TES_SOCKETS PROPERTY STRINGS custom Qt)
 
 message(STATUS "Using ${TES_SOCKETS} sockets")
 
+# Find supporting libraies.
+# ZLib
 set(TES_ZLIB 0)
 if(NOT DEFINED TES_ZLIB_OFF OR NOT TES_ZLIB_OFF)
   find_package(ZLIB)
@@ -34,6 +47,19 @@ if(NOT DEFINED TES_ZLIB_OFF OR NOT TES_ZLIB_OFF)
   endif(ZLIB_FOUND)
 endif(NOT DEFINED TES_ZLIB_OFF OR NOT TES_ZLIB_OFF)
 
+# Qt (for sockets)
+if(TES_SOCKETS STREQUAL "custom")
+  list(APPEND DOXYGEN_INPUT_LIST "${CMAKE_CURRENT_LIST_DIR}/tcp")
+elseif(TES_SOCKETS STREQUAL "Qt")
+  find_package(Qt5Network)
+else()
+  message(FATAL_ERROR "Unknown socket implementation specificed: ${TES_SOCKETS}")
+endif()
+
+#-------------------------------------------------------------------------------
+# Configuration header setup.
+#-------------------------------------------------------------------------------
+# Setup information for configuring the 3es-core configuration header.
 # Set TES_32 and TES_64 to 1 or 0 depending on CMAKE_SIZEOF_VOID_P denoting 32- or 64-bit pointers.
 math(EXPR TES_32 "(${CMAKE_SIZEOF_VOID_P} & 4) >> 2")
 math(EXPR TES_64 "(${CMAKE_SIZEOF_VOID_P} & 8) >> 3")
@@ -48,25 +74,34 @@ if(NOT DEFINED TES_IS_BIG_ENDIAN)
   endif(IS_BIG_ENDIAN)
 endif(NOT DEFINED TES_IS_BIG_ENDIAN)
 
-list(APPEND DOXYGEN_INPUT_LIST "${CMAKE_CURRENT_LIST_DIR}" "${CMAKE_CURRENT_LIST_DIR}/tcp")
-if(TES_SOCKETS STREQUAL "custom")
-  list(APPEND DOXYGEN_INPUT_LIST "${CMAKE_CURRENT_LIST_DIR}/tcp")
-elseif(TES_SOCKETS STREQUAL "Qt")
-  find_package(Qt5Network)
-else()
-  message(FATAL_ERROR "Unknown socket implementation specificed: ${TES_SOCKETS}")
-endif()
-
 configure_file(3es-core.in.h "${CMAKE_CURRENT_BINARY_DIR}/3es-core.h")
-set(PUBLIC_HEADERS "${CMAKE_CURRENT_BINARY_DIR}/3es-core.h")
+set(PUBLIC_HEADERS
+  # Generated files.
+  "${CMAKE_CURRENT_BINARY_DIR}/3es-core.h"
+  "${CMAKE_CURRENT_BINARY_DIR}/3es-core-export.h"
+)
 
+#-------------------------------------------------------------------------------
+# Define the source files for the 3es-core library.
+#-------------------------------------------------------------------------------
 include(sourcelist.cmake)
 
-set(DOXYGEN_INPUT_LIST "${DOXYGEN_INPUT_LIST}" PARENT_SCOPE)
-
-add_library(3es-core ${PUBLIC_HEADERS} ${SOURCES} ${PRIVATE_HEADERS} ${PRIVATE_SOURCES})
-
+#-------------------------------------------------------------------------------
 # Library setup.
+#-------------------------------------------------------------------------------
+# Define the 3es-core library.
+add_library(3es-core ${PUBLIC_HEADERS} ${PUBLIC_SHAPE_HEADERS} ${SOURCES} ${PRIVATE_HEADERS} ${PRIVATE_SOURCES})
+
+# Disable some warnings.
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  # Disable warning about and/or precedence. Remember when it comes to precedence:
+  # - and is equivalent to multiplication
+  # - or is equilvanet to addition
+  # Now we don't need excessive brackets (parentheses for the Americans)
+  target_compile_options(3es-core PRIVATE "-Wno-logical-op-parentheses")
+endif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+
+# Define DLL export header (primarily for MSVC).
 include(GenerateExportHeader)
 generate_export_header(3es-core
       EXPORT_MACRO_NAME _3es_coreAPI
@@ -82,10 +117,11 @@ set_target_properties(3es-core PROPERTIES
   # Build version.
   VERSION ${TES_VERSION}
   # API version.
-  SOVERSION 0 # API version.
+  SOVERSION ${TES_VERSION_MAJOR} # API version.
   # Compatibility versioning. Referenced via the COMPATIBLE_INTERFACE_STRING property.
-  INTERFACE_3escore_MAJOR_VERSION 0
+  INTERFACE_3escore_MAJOR_VERSION ${TES_VERSION_MAJOR}
 )
+
 # Help enforce version compability by ensuring all link dependencies expect the same INTERFACE_3escore_MAJOR_VERSION
 set_property(TARGET 3es-core APPEND PROPERTY COMPATIBLE_INTERFACE_STRING INTERFACE_3escore_MAJOR_VERSION)
 
@@ -94,7 +130,7 @@ target_include_directories(3es-core
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
-    $<INSTALL_INTERFACE:include>
+    $<INSTALL_INTERFACE:include/3es-core>
 )
 
 # Need to explicitly define some compile flags because the target name starts with a number.
@@ -104,29 +140,73 @@ else(BUILD_SHARED_LIBS)
   target_compile_definitions(3es-core PUBLIC -DTES_STATIC)
 endif(BUILD_SHARED_LIBS)
 
+# Link dependencies
 if(ZLIB_FOUND AND NOT TES_ZLIB_OFF)
   target_include_directories(3es-core PRIVATE "${ZLIB_INCLUDE_DIRS}")
   target_link_libraries(3es-core ${ZLIB_LIBRARIES})
 endif(ZLIB_FOUND AND NOT TES_ZLIB_OFF)
-
-if(MSVC)
-  # Windows build requires Winsock2.
-  target_link_libraries(3es-core Ws2_32.lib)
-endif(MSVC)
 
 if(TES_SOCKETS STREQUAL "Qt")
   target_link_libraries(3es-core Qt5::Network)
   target_include_directories(3es-core PRIVATE "${Qt5Network_INCLUDE_DIRS}")
 endif()
 
-# Setup installation.
-set(CONFIG_SUFFIX -config-targets)
-if(TES_CORE_ONLY)
-  set(CONFIG_SUFFIX -config)
-endif(TES_CORE_ONLY)
+if(MSVC)
+  # Windows build requires Winsock2.
+  target_link_libraries(3es-core Ws2_32.lib)
+endif(MSVC)
 
+#-------------------------------------------------------------------------------
+# Doxygen configuration.
+#-------------------------------------------------------------------------------
+# Doxygen setup.
+if(TES_BUILD_DOXYGEN)
+  # Include Doxygen helper functions. This also finds the Doxygen package.
+  include(cmake/doxygen.cmake)
+
+  set(ADDITIONAL_IMAGE_DIRS)
+  # Define UI images path if present.
+  if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/../3rdEyeScene/Assets/UI/Images")
+    list(APPEND ADDITIONAL_IMAGE_DIRS "${CMAKE_CURRENT_LIST_DIR}/../3rdEyeScene/Assets/UI/Images")
+  endif(EXISTS "${CMAKE_CURRENT_LIST_DIR}/../3rdEyeScene/Assets/UI/Images")
+
+  if(DOXYGEN_FOUND)
+    # Create a target to build the documentation.
+    # Here we also setup various documentation variables passed through to the doxyfile configuration.
+    # Each named argument below describes the Doxygen variable it sets.
+    doxygen_create(
+      DOXYFILE 3es-doc/doxyfile.in  # Doxyfile to configure.
+      PROJECT 3es # PROJECT_NAME
+      VERSION ${TES_VERSION}        # PROJECT_NUMBER
+      BRIEF "3rd Eye Scene documentation" # PROJECT_BRIEF
+      OUTPUT_DIR html               # HTML_OUPTUT
+      # CSS <style>.css             # HTML_STYLESHEET
+      PUBLISHER "CSIRO"             # DOCSET_PUBLISHER_NAME
+      PUBLISHER_ID au.csiro         # DOCSET_PUBLISHER_ID
+      PROJECT_ID au.csiro.3es       # DOCSET_BUNDLE_ID, QHP_NAMESPACE, ECLIPSE_DOC_ID
+      PATHS                         # INPUT (RECURSIVE is on)
+        3es-doc  # Must come first to define documentation groups.
+        .
+      EXCLUDE_PATHS                 # EXCLUDE
+        ./private
+      # Where to find source code examples.
+      # EXAMPLE_PATHS <paths>        # EXAMPLE_PATH
+      # Where to find images.
+      IMAGE_PATHS                    # IMAGE_PATH
+        3es-doc/images
+        ${ADDITIONAL_IMAGE_DIRS}
+      )
+
+    # Setup installation of the generated documentation: source, destination.
+    doxygen_install("${CMAKE_CURRENT_BINARY_DIR}/html" 3es)
+  endif(DOXYGEN_FOUND)
+endif(TES_BUILD_DOXYGEN)
+
+#-------------------------------------------------------------------------------
+# Installation.
+#-------------------------------------------------------------------------------
 # Binary installation
-install(TARGETS 3es-core EXPORT ${CMAKE_PROJECT_NAME}${CONFIG_SUFFIX}
+install(TARGETS 3es-core EXPORT 3es-config-targets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   RUNTIME DESTINATION bin
@@ -140,17 +220,46 @@ endif(BUILD_SHARED_LIBS)
 
 # Header installation
 install(FILES ${PUBLIC_HEADERS} DESTINATION include/3es-core COMPONENT Devel)
+install(FILES ${PUBLIC_SHAPE_HEADERS} DESTINATION include/3es-core/shapes COMPONENT Devel)
 
-export(EXPORT ${CMAKE_PROJECT_NAME}${CONFIG_SUFFIX}
-  FILE "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}${CONFIG_SUFFIX}.cmake"
+# Setup import scripts.
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+  "${CMAKE_CURRENT_BINARY_DIR}/3es-config-version.cmake"
+  VERSION ${TES_VERSION}
+  COMPATIBILITY AnyNewerVersion
+)
+
+export(EXPORT 3es-config-targets
+  FILE "${CMAKE_CURRENT_BINARY_DIR}/3es-config-targets.cmake"
   NAMESPACE 3es::
 )
-install(EXPORT ${CMAKE_PROJECT_NAME}${CONFIG_SUFFIX}
-  FILE ${CMAKE_PROJECT_NAME}${CONFIG_SUFFIX}.cmake
+
+configure_file(cmake/3es-config.in.cmake
+  "${CMAKE_CURRENT_BINARY_DIR}/3es-config.cmake"
+  COPYONLY
+)
+
+install(EXPORT 3es-config-targets
+  FILE 3es-config-targets.cmake
   NAMESPACE 3es::
   DESTINATION ${ConfigPackageLocation}
 )
 
+install(
+  FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/3es-config.cmake"
+    # "${CMAKE_CURRENT_BINARY_DIR}/3es-config-targets.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/3es-config-version.cmake"
+  DESTINATION ${ConfigPackageLocation}
+  COMPONENT Devel)
+
+  # Install MSVC runtime libraries. This will also affect the CPack installation.
+include(InstallRequiredSystemLibraries)
+
+#-------------------------------------------------------------------------------
+# IDE source sorting
+#-------------------------------------------------------------------------------
 source_group("source" FILES "${CMAKE_CURRENT_BINARY_DIR}/3es-core.h")
 source_group("source" REGULAR_EXPRESSION ".*$")
 source_group("source\\private" REGULAR_EXPRESSION "/private/.*$")
